@@ -31,6 +31,6 @@ public class TTTGameTest {
         val result = game.run(config, bots);
 
         // Assert
-        System.out.println(result.winner() == null ? "Draw" : "Winner: " + (result.winner() == bots.getFirst() ? "Bot 1" : "Bot 2"));
+        System.out.println(result.winner() == null ? "Draw" : "Winner: " + (result.winner() == bots.get(0) ? "Bot 1" : "Bot 2"));
     }
 }
